# gbfs2osm

./: .gitignore  LICENSE  README.md  output.osm  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
gbfs2osm/: __init__.py  main.py
src/: main.py
